# ThinkDepthAI

./: .env.example  .gitignore  README.md  pyproject.toml
config/agent/: base.yaml
config/eval/: dataset_v1_500_smoke.yaml  openrca2_lite.yaml  openrca2_lite_v1.yaml  openrca2_lite_v1_new.yaml  openrca2_lite_v3_smoke.yaml  rcabench.yaml  v2_smoke.yaml
config/model/: base.yaml
scripts/: check_preprocess.py  init_eval_db.py  seed_dataset_v1_db.py  seed_lite_v1_db.py  seed_v3_db.py  setup_eval_env.sh  smoke_matrix.txt
src/thinkdepthai/: __init__.py  agent.py  converters.py  graph.py  trajectory_logger.py
src/thinkdepthai/agents/: eval_agent.py
src/thinkdepthai/cli/: eval.py  main.py  run.py
src/thinkdepthai/config/: schema.py
src/thinkdepthai/prompts/agents/langgraph/: rca.yaml
src/thinkdepthai/tools_lib/: base.py  langchain_adapter.py  query_parquet_toolkit.py
src/thinkdepthai/utils/: logger.py  path.py
tests/: test_agent.py
