[project]
name = "thinkdepthai"
version = "0.1.0"
description = "ThinkDepthAI RCA Agent - Root Cause Analysis agent using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "colorlog>=6.9.0",
    "duckdb>=1.4.3",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
    "rcabench-platform[llm-eval]>=0.1.0",
    "rich>=13.7.1",
    "tenacity>=8.2.0",
    "typer>=0.21.1",
]

[project.scripts]
thinkdepthai = "thinkdepthai.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thinkdepthai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = ["-v", "-s"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
isort = { combine-as-imports = true, known-first-party = ["thinkdepthai"] }

[tool.ruff.lint.pydocstyle]
convention = "google"
